working on publishing site to github pages

--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
 	</section>
 
 
+	<!-- Four -->
+	<secion id=four class="wrapper style4">
+		
+	</secion>
+
+
 
 	<!-- CTA -->
 	<section id="cta" class="wrapper style4">
