updated project descriptions

--- a/index.html
+++ b/index.html
@@ -151,8 +151,12 @@
 				<h2>ClimbInvest<br />
 					<i>Gamified stock-picking web app</i>
 				</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam
-					aenean mi ligula.</p>
+				<p>Create an account worth $10k and trade your way to the top in a simulated environment with real-time stock exchange pricing.</p>
+				<ul>
+					<li>React/Redux Frontend</li>
+					<li>Express/Sequelize Backend with Node.js and PostgreSQL</li>
+					<li>Iex Cloud api</li>
+				</ul>
 			</div>
 		</section>
 		<section class="spotlight">
@@ -161,10 +165,14 @@
 			</div>
 			<div class="content">
 				<h2>EcoHub<br />
-					<i>Environmental task tracking web app</i>
+					<i>Environmental task tracking and social media web app</i>
 				</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam
-					aenean mi ligula.</p>
+				<p>Post your environmentally-friendly accomplishments to keep track of your progress and for others to see. Gain experience points along the way.</p>
+				<ul>
+					<li>React/Redux and Chakra-UI Frontend</li>
+					<li>Flask/SQLAlchemy Backend with Python and PostgreSQL</li>
+					<li>Open Weather api</li>
+				</ul>
 			</div>
 		</section>
 		<section class="spotlight">
@@ -177,17 +185,21 @@
 					<i>Fitness tracking web app</i><br />
 					<i style='font-size: 65%;'>Group Project</i>
 				</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam
-					aenean mi ligula.</p>
+				<p>Create running/walking/biking routes to traverse and log your times, add nearby rivals and try to reach the top of the leaderboard.</p>
+				<ul>
+					<li>React/Redux and Material-UI Frontend</li>
+					<li>Flask/SQLAlchemy Backend with Python and PostgreSQL</li>
+					<li>MapBox api</li>
+				</ul>
 			</div>
 		</section>
 	</section>
 
 
-	<!-- Four -->
+	<!-- Four
 	<secion id=four class="wrapper style4">
 		
-	</secion>
+	</secion> -->
 
 
 
