--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
 	<title>Kyle Barthelmes</title>
 	<meta charset="utf-8" />
+	<meta property='og:image' content="/images/banner.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
