--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <head>
 	<title>Kyle Barthelmes</title>
 	<meta charset="utf-8" />
-	<meta name='image' property='og:image' content="images/banner.png" />
+	<meta name='title' property='og:title' content="Kyle Barthelmes - Portfolio" />
+	<meta name='type' property='og:type' content="website" />
+	<meta name='image' property='og:image' content="images/preview.jpg" />
+	<meta name='url' property='og:url' content="https://kbart2401.github.io/" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
@@ -145,10 +148,11 @@
 	<section id="three" class="wrapper alt style2">
 		<h2 style='text-align: center;'>Portfolio</h2>
 		<section class="spotlight">
-			<div class="image"><a href='https://climbinvest.herokuapp.com/' target='_blank' referrerpolicy="no-referrer">
+			<div class="image"> 
+				<a href='https://climbinvest.herokuapp.com/' target='_blank' referrerpolicy="no-referrer">
 					<img src="images/ClimbInvest.png" alt="" /></a>
 			</div>
-			<div class="content">
+			<div class="content"> 
 				<h2>ClimbInvest<br />
 					<i>Gamified stock-picking web app</i>
 				</h2>
@@ -260,6 +264,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/fx.js"></script>
 
 </body>
 
