--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name='title' property='og:title' content="Kyle Barthelmes - Portfolio" />
 	<meta name='type' property='og:type' content="website" />
-	<meta name='image' property='og:image' content="images/preview.jpg" />
+	<meta name='image' property='og:image' content="https://kyle-b-photo-storage.s3.us-east-2.amazonaws.com/kyle-b-portfolio-site.png" />
 	<meta name='url' property='og:url' content="https://kbart2401.github.io/" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
