added hover effect over live links

--- a/index.html
+++ b/index.html
@@ -150,7 +150,9 @@
 		<section class="spotlight">
 			<div class="image"> 
 				<a href='https://climbinvest.herokuapp.com/' target='_blank' referrerpolicy="no-referrer">
-					<img src="images/ClimbInvest.png" alt="" /></a>
+					<img src="images/ClimbInvest.png" alt="" />
+				<div class="image-overlay">Visit Live Site</div>
+			</a>
 			</div>
 			<div class="content"> 
 				<h2>ClimbInvest<br />
@@ -166,7 +168,9 @@
 		</section>
 		<section class="spotlight">
 			<div class="image"><a href='https://ecohub.herokuapp.com/' target='_blank' referrerpolicy="no-referrer">
-					<img src="images/Ecohub.png" alt="" /></a>
+					<img src="images/Ecohub.png" alt="" />
+					<div class="image-overlay">Visit Live Site</div>
+					</a>
 			</div>
 			<div class="content">
 				<h2>EcoHub<br />
@@ -183,7 +187,9 @@
 		<section class="spotlight">
 			<div class="image"><a href='https://catch-me-if-you-cann.herokuapp.com/' target='_blank'
 					referrerpolicy="no-referrer">
-					<img src="images/CMIFC.png" alt="" /></a>
+					<img src="images/CMIFC.png" alt="" />
+					<div class="image-overlay">Visit Live Site</div>
+					</a>
 			</div>
 			<div class="content">
 				<h2>Catch Me if you Can<br />
@@ -264,7 +270,6 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script src="assets/js/fx.js"></script>
 
 </body>
 
