updated background for want to connect section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<meta charset="utf-8" />
 	<meta name='title' property='og:title' content="Kyle Barthelmes - Portfolio" />
 	<meta name='type' property='og:type' content="website" />
-	<meta name='image' property='og:image' content="https://kyle-b-photo-storage.s3.us-east-2.amazonaws.com/kyle-b-portfolio-site.png" />
+	<meta name='image' property='og:image'
+		content="https://kyle-b-photo-storage.s3.us-east-2.amazonaws.com/kyle-b-portfolio-site.png" />
 	<meta name='url' property='og:url' content="https://kbart2401.github.io/" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,18 +40,15 @@
 				<img src='images/profile-pic.jpg' id='profile-pic' />
 				<p>Software Engineer<br />
 					JavaScript, React, Python<br />
-					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 				<ul class="actions special">
 					<li><a href="https://www.linkedin.com/in/kyle-barthelmes-a5120b51/" target='_blank'
 							referrerpolicy="no-referrer">
 							<img src="https://img.icons8.com/android/48/000000/linkedin.png" id="linkedin" /></a>
 					</li>
-					<li><a href="https://angel.co/u/kyle-barthelmes" target='_blank'
-							referrerpolicy="no-referrer">
+					<li><a href="https://angel.co/u/kyle-barthelmes" target='_blank' referrerpolicy="no-referrer">
 							<img src="https://img.icons8.com/color/48/000000/angelist.png" /></a>
 					</li>
-					<li><a href="https://github.com/Kbart2401" target='_blank'
-							referrerpolicy="no-referrer">
+					<li><a href="https://github.com/Kbart2401" target='_blank' referrerpolicy="no-referrer">
 							<img src="https://img.icons8.com/ios-filled/50/000000/github.png" id='github' /></a>
 					</li>
 				</ul>
@@ -72,7 +70,8 @@
 
 							My passion for creativity and technology first led me to audio engineering which primarily consisted of
 							producing audio
-							books as well as recording music. Looking for a new challenge I completed my bachelor's degree and worked in the
+							books as well as recording music. Looking for a new challenge I completed my bachelor's degree and worked
+							in the
 							financial
 							services industry with a large wealth management firm. I'm grateful for all the opportunities that I've
 							had
@@ -80,7 +79,8 @@
 							I still didn't feel like
 							I had found what I was really looking for in my career.<br /><br />
 
-							Desiring something that aligned closer to who I am, I continued searching and when I came across software engineering I lit up. 
+							Desiring something that aligned closer to who I am, I continued searching and when I came across software
+							engineering I lit up.
 							I dove right in and started
 							taking a course in C++ and got hooked. Then I enrolled with App Academy and once I started building
 							full-stack
@@ -134,17 +134,18 @@
 	<section id="three" class="wrapper alt style2">
 		<h2 style='text-align: center;'>Portfolio</h2>
 		<section class="spotlight">
-			<div class="image"> 
+			<div class="image">
 				<a href='https://climbinvest.herokuapp.com/' target='_blank' referrerpolicy="no-referrer">
 					<img src="images/ClimbInvest.png" alt="" />
-				<div class="image-overlay">Visit Live Site</div>
-			</a>
+					<div class="image-overlay">Visit Live Site</div>
+				</a>
 			</div>
-			<div class="content"> 
+			<div class="content">
 				<h2>ClimbInvest<br />
 					<i>Gamified stock-picking web app</i>
 				</h2>
-				<p>Create an account worth $10k and trade your way to the top in a simulated environment with real-time stock exchange pricing.</p>
+				<p>Create an account worth $10k and trade your way to the top in a simulated environment with real-time stock
+					exchange pricing.</p>
 				<ul>
 					<li>React/Redux Frontend</li>
 					<li>Express/Sequelize Backend with Node.js and PostgreSQL</li>
@@ -156,13 +157,14 @@
 			<div class="image"><a href='https://ecohub.herokuapp.com/' target='_blank' referrerpolicy="no-referrer">
 					<img src="images/Ecohub.png" alt="" />
 					<div class="image-overlay">Visit Live Site</div>
-					</a>
+				</a>
 			</div>
 			<div class="content">
 				<h2>EcoHub<br />
 					<i>Environmental task tracking and social media web app</i>
 				</h2>
-				<p>Post your environmentally-friendly accomplishments to keep track of your progress and for others to see. Gain experience points along the way.</p>
+				<p>Post your environmentally-friendly accomplishments to keep track of your progress and for others to see. Gain
+					experience points along the way.</p>
 				<ul>
 					<li>React/Redux and Chakra-UI Frontend</li>
 					<li>Flask/SQLAlchemy Backend with Python and PostgreSQL</li>
@@ -175,14 +177,15 @@
 					referrerpolicy="no-referrer">
 					<img src="images/CMIFC.png" alt="" />
 					<div class="image-overlay">Visit Live Site</div>
-					</a>
+				</a>
 			</div>
 			<div class="content">
 				<h2>Catch Me if you Can<br />
 					<i>Fitness tracking web app</i><br />
 					<i style='font-size: 65%;'>Group Project</i>
 				</h2>
-				<p>Create running/walking/biking routes to traverse and log your times, add nearby rivals and try to reach the top of the leaderboard.</p>
+				<p>Create running/walking/biking routes to traverse and log your times, add nearby rivals and try to reach the
+					top of the leaderboard.</p>
 				<ul>
 					<li>React/Redux and Material-UI Frontend</li>
 					<li>Flask/SQLAlchemy Backend with Python and PostgreSQL</li>
@@ -191,13 +194,6 @@
 			</div>
 		</section>
 	</section>
-
-
-	<!-- Four
-	<secion id=four class="wrapper style4">
-		
-	</secion> -->
-
 
 
 	<!-- CTA -->
@@ -210,36 +206,23 @@
 							referrerpolicy="no-referrer">
 							<img src="https://img.icons8.com/android/48/000000/linkedin.png" id="linkedin" /></a>
 					</li>
-					<li><a href="https://angel.co/u/kyle-barthelmes" target='_blank'
-							referrerpolicy="no-referrer">
+					<li><a href="https://angel.co/u/kyle-barthelmes" target='_blank' referrerpolicy="no-referrer">
 							<img src="https://img.icons8.com/color/48/000000/angelist.png" /></a>
 					</li>
-					<li><a href="https://github.com/Kbart2401" target='_blank'
-							referrerpolicy="no-referrer">
+					<li><a href="https://github.com/Kbart2401" target='_blank' referrerpolicy="no-referrer">
 							<img src="https://img.icons8.com/ios-filled/50/000000/github.png" id='github' /></a>
 					</li>
-					<li style='overflow: hidden;'><a href="mailto:Kbart2401@gmail.com" >
-						<img src="images/icons8-envelope-50.png" id='envelope'/></a>
+					<li style='overflow: hidden;'><a href="mailto:Kbart2401@gmail.com">
+							<img src="images/icons8-envelope-50.png" id='envelope' /></a>
 					</li>
 				</ul>
 				<p></p>
 			</header>
-			<!-- <ul class="actions stacked">
-				<li><a href="#" class="button fit primary">Activate</a></li>
-				<li><a href="#" class="button fit">Learn More</a></li>
-			</ul> -->
 		</div>
 	</section>
 
 	<!-- Footer -->
 	<footer id="footer">
-		<!-- <ul class="icons">
-			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-			<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-		</ul> -->
 		<ul class="copyright">
 			<li>&copy; Kyle Barthelmes</li>
 			<li>Design: HTML5 UP</a></li>
