added animation on kid pic to only fire upon scrolling into view

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							perfecting my
 							abilities.
 						</p>
-						<div class='kid-pic-container fade-in'><img class='kid-kyle' src='images/kid-kyle.JPG' /></div>
+						<div class='kid-pic-container'><img class='kid-kyle' src='images/kid-kyle.JPG' /></div>
 					</div>
 					<button id='resume-button' onclick="window.open('Barthelmes_Kyle_Resume.pdf')">Resume</button>
 			</div>
@@ -239,6 +239,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/fx.js"></script>
 
 </body>
 
