--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <html>
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-87316014-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-87316014-2');
+	</script>
 	<title>Kyle Barthelmes</title>
 	<meta charset="utf-8" />
 	<meta name='title' property='og:title' content="Kyle Barthelmes - Portfolio" />
